test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u8_add_const_eval_overflow/src/main.sw
script;

const RESULT: u8 = u8::max() + 1;

fn main() -> bool {
    log(RESULT);

    true
}
